@@ -8,19 +8,7 @@ import os
 import sys
 import zest.releaser.choose
 import utils
-
-from ConfigParser import ConfigParser
-from ConfigParser import NoSectionError
-from ConfigParser import NoOptionError
-
-try:
-    from collective.dist import mupload
-    collective_dist = True
-except ImportError:
-    collective_dist = False
-
-index_servers = []
-DIST_CONFIG_FILE = '.pypirc'
+import pypi
 
 logger = logging.getLogger('release')
 
@@ -63,40 +51,38 @@ def main(return_tagdir=False):
         cmd = vcs.cmd_checkout_from_tag(version, tagdir)
         print getoutput(cmd)
         logger.info("Tag checkout placed in %s", tagdir)
+
         if 'setup.py' in os.listdir(tagdir):
+            # See if creating an egg actually works.
             os.chdir(tagdir)
             logger.info("Making an egg of a fresh tag checkout.")
             print getoutput('%s setup.py sdist' % sys.executable)
-            # First ask if we want to upload to pypi, which should
-            # always work, also without collective.dist
-            if utils.package_in_pypi(vcs.name):
-                logger.info("We are on PYPI.")
-                default = True
-            else:
-                logger.info("We are currently NOT registered with PyPI.")
-                default = False
-            if utils.ask("Register and upload to PyPI", default=default):
-                result = getoutput('%s setup.py register sdist upload' %
-                                   sys.executable)
-                utils.show_last_lines(result)
 
-            # If collective.dist is installed, the user may have
-            # defined other servers to upload to.
-            # XXX Check what needs to be done with python 2.6, where
-            # collective.dist is not needed anymore as it is built-in.
-            rc = os.path.join(os.path.expanduser('~'), DIST_CONFIG_FILE)
-            if collective_dist and os.path.exists(rc):
-                config = ConfigParser()
-                config.read(rc)
-                try:
-                    raw_index_servers = config.get('distutils', 'index-servers')
-                except NoSectionError, NoOptionError:
-                    raw_index_servers = ''
-                # We have already asked about uploading to pypi.
-                index_servers = [
-                    server.strip() for server in raw_index_servers.split('\n')
-                    if server.strip() not in ('', 'pypi')]
-                for server in index_servers:
+            config = pypi.get_pypi_config()
+            if not config:
+                logger.warn("You must have a properly configured %s file in "
+                            "your home dir to upload an egg.",
+                            pypi.DIST_CONFIG_FILE)
+            else:
+                # First ask if we want to upload to pypi, which should
+                # always work, also without collective.dist.
+                if utils.package_in_pypi(vcs.name):
+                    logger.info("We are on PYPI.")
+                    default = True
+                else:
+                    logger.info("We are currently NOT registered with PyPI.")
+                    default = False
+                if pypi.has_old_pypi_config(config) and utils.ask(
+                    "Register and upload to PyPI", default=default):
+                    result = getoutput('%s setup.py register sdist upload' %
+                                       sys.executable)
+                    utils.show_last_lines(result)
+
+                # If collective.dist is installed, the user may have
+                # defined other servers to upload to.
+                # XXX Check what needs to be done with python 2.6, where
+                # collective.dist is not needed anymore as it is built-in.
+                for server in pypi.get_distutils_servers(config):
                     if utils.ask("Register and upload to %s" % server):
                         result = getoutput(
                             '%s setup.py mregister sdist mupload -r %s'
